@@ -1,5 +1,6 @@
 0.03
  - Add test for bad ISBN (field 020a).
+ - Add test for record without ISB (field 020a).
  - Fix dependencies.
 
 0.02 2025-09-28T09:09:10+02:00
